feat: add file proxy for seaweedfs
